force-app/main/default/objects/Conflict_Check_Email_Settings__c/Conflict_Check_Email_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Conflict Check Email Settings</label>
</CustomObject>