force-app/main/default/objects/Conflict_Check_Email_Settings__c/fields/CC_Client_Records_Delete__c.field-meta.xml
<CustomField>
    <fullName>CC_Client_Records_Delete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CC Client Records Delete</label>
    <type>Checkbox</type>
</CustomField>