force-app/main/default/objects/Conflict_Check_Email_Settings__c/fields/CC_Email_Remainder_Days__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Remainder_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <label>CC Email Remainder Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>