force-app/main/default/objects/Conflict_Check_Email_Settings__c/fields/CC_Final_Email_Remainder_Day__c.field-meta.xml
<CustomField>
    <fullName>CC_Final_Email_Remainder_Day__c</fullName>
    <defaultValue>13</defaultValue>
    <label>CC Final Email Remainder Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>