force-app/main/default/objects/Conflict_Check_Email_Settings__c/fields/CC_Records_Delete_On_Day__c.field-meta.xml
<CustomField>
    <fullName>CC_Records_Delete_On_Day__c</fullName>
    <defaultValue>14</defaultValue>
    <label>CC Records Delete On Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>