force-app/main/default/objects/Conflict_Check_Email_Settings__c/fields/CC_Remainder_Emails_Enable__c.field-meta.xml
<CustomField>
    <fullName>CC_Remainder_Emails_Enable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CC Remainder Emails Enable</label>
    <type>Checkbox</type>
</CustomField>