force-app/main/default/objects/Conflict_Check_Email_Settings__c/fields/Remainder_Classic_Email_API__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Classic_Email_API__c</fullName>
    <defaultValue>&quot;Conflict_Check_Notification_after_7days&quot;</defaultValue>
    <label>Remainder Classic Email API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>