force-app/main/default/objects/Conflict_Check_Email_Settings__c/fields/Show_Comments_For_Discuss__c.field-meta.xml
<CustomField>
    <fullName>Show_Comments_For_Discuss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Comments For Discuss</label>
    <type>Checkbox</type>
</CustomField>